--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <center>
             <h1>Selamat Datang</h1>
         </center>
-            <p>Halo, selamat datang di halaman pertemuan 9</p>
+            <p>Halo, selamat datang di halaman pertemuan 9.
+			ini hasil edit dari punya anis</p>
     </body>
 </html>
